--- a/Main/guidance_towards_usability.ipynb
+++ b/Main/guidance_towards_usability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,8 @@
     "import Functions.processGen as processGen\n",
     "\n",
     "# Model import\n",
-    "from parametricVAE import dVAE\n"
+    "from parametricVAE import dVAE\n",
+    "from sklearn.svm import SVC\n"
    ]
   },
   {
@@ -58,22 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fabie\\AppData\\Local\\Temp\\ipykernel_20732\\251143154.py:12: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  rated_bikes_df['rating'] = rated_bikes_df['rating'].replace({'yes': 1, 'no': 0})\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded Imputed Dataframe in  1.3540003299713135 seconds\n"
+      "Loaded Imputed Dataframe in  1.3770132064819336 seconds\n"
      ]
     }
    ],
@@ -169,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,10 +189,8 @@
     "latent_unusable = encoder.predict(unusable_bikes)\n",
     "\n",
     "latent_usable_test = encoder.predict(usable_bikes_test_dfn)\n",
-    "# latent_usable_val = encoder.predict(usable_bikes_val_dfn)\n",
     "latent_usable_train = encoder.predict(usable_bikes_train_dfn)\n",
     "latent_unusable_test = encoder.predict(unusable_bikes_test_dfn)\n",
-    "# latent_unusable_val = encoder.predict(unusable_bikes_val_dfn)\n",
     "latent_unusable_train = encoder.predict(unusable_bikes_train_dfn)\n",
     "clear_output(wait=False)"
    ]
@@ -212,15 +203,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### What are the odds of validation set?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,6 +315,18 @@
     "\n",
     "\n",
     "    def move_points(self, points, step_scale=0.1, use_direction = 0, alpha = 0.2):\n",
+    "        \"\"\"\n",
+    "        Adjusts the given points by moving them in the direction determined by the gradients of log-likelihoods.\n",
+    "        \n",
+    "        Parameters:\n",
+    "            points (array-like): The input points to be adjusted.\n",
+    "            step_scale (float): The step size for moving the points.\n",
+    "            use_direction (int): Determines the strategy for combining gradients.\n",
+    "            alpha (float): The weight factor for balancing usable and unusable gradients.\n",
+    "            \n",
+    "        Returns:\n",
+    "            np.ndarray: The adjusted points.\n",
+    "        \"\"\"\n",
     "        new_points = []\n",
     "\n",
     "        for point in points:\n",
@@ -506,20 +502,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "class SVMClassifier:\n",
-    "    def __init__(self, kernel='poly',C = 100, coef0 = 10, degree= 2, gamma=  'scale', scaler=1000):\n",
+    "    def __init__(self, kernel='poly',C = 100, coef0 = 10, degree= 2, gamma= 'scale', scaler=1000):\n",
     "        \"\"\"\n",
-    "        Initializes the SVMClassifier with specified kernel, C, and degree.\n",
-    "        \n",
+    "        Initializes the SVMClassifier with specified kernel, regularization, and scaling parameters.\n",
+    "\n",
     "        Parameters:\n",
-    "        - kernel: str, optional (default='rbf')\n",
-    "            The kernel type to be used in the algorithm. It must be one of 'linear', 'poly', 'rbf', 'sigmoid', etc.\n",
-    "        - C: float, optional (default=1)\n",
-    "            Regularization parameter. The strength of the regularization is inversely proportional to C.\n",
-    "        - degree: int, optional (default=3)\n",
-    "            Degree of the polynomial kernel function ('poly'). Ignored by all other kernels.\n",
+    "        - kernel (str): The kernel type to be used in the algorithm. \n",
+    "                        Options include 'linear', 'poly', 'rbf', 'sigmoid', etc. (default: 'poly').\n",
+    "        - C (float): Regularization parameter. The strength of the regularization is inversely proportional to C. \n",
+    "                     Must be a positive float (default: 100).\n",
+    "        - coef0 (float): Independent term in kernel function. Only significant for 'poly' and 'sigmoid' kernels (default: 10).\n",
+    "        - degree (int): Degree of the polynomial kernel function ('poly'). Ignored by other kernels (default: 2).\n",
+    "        - gamma (str or float): Kernel coefficient for 'rbf', 'poly', and 'sigmoid'. \n",
+    "                                Can be 'scale', 'auto', or a positive float (default: 'scale').\n",
+    "        - scaler (float): A scaling factor to avoid floating point errors (default: 1000).\n",
+    "\n",
+    "        Attributes:\n",
+    "        - model (sklearn.svm.SVC): The Support Vector Classifier instance initialized with the given parameters.\n",
     "        \"\"\"\n",
     "        # Initialize the SVM with the given kernel, C, and degree\n",
     "        self.kernel = kernel\n",
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -884,12 +884,12 @@
     "    # best_bandwidth_unusable=  0.25\n",
     "    \n",
     "    # Initialize and return fresh instances of the models\n",
-    "    # latent_kde_classifier = LatentKDEClassifier(\n",
+    "    # latent_kde_classifier_temp = LatentKDEClassifier(\n",
     "    #     best_bandwidth_usable,\n",
     "    #     best_bandwidth_unusable,\n",
     "    #     min_confidence_usable=None\n",
     "    # )\n",
-    "    # latent_kde_classifier.fit(latent_usable_train_filtered, latent_unusable_train_filtered)\n",
+    "    # latent_kde_classifier_temp.fit(latent_usable_train_filtered, latent_unusable_train_filtered)\n",
     "\n",
     "    latent_kde_classifier_temp = LatentKDEClassifier(best_bandwidth_usable, best_bandwidth_unusable)\n",
     "    latent_kde_classifier_temp.fit(latent_usable_train_filtered, latent_unusable_train_filtered)\n",
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,13 +1330,11 @@
     "\n",
     "\n",
     "\n",
-    "#### remove\n",
     "    bike_features_point = bike_parameters[0][column_indices_to_keep]\n",
     "    pred_svm = 1\n",
     "    if pred_svm == 1:\n",
     "        svm_bikes.append(bike_parameters[0])  # Add as a new row\n",
     "        svm_count = counter  # Track when SVM first made its decision\n",
-    "########\n",
     "\n",
     "    # Update each threshold-specific classifier prediction and append results if not already added\n",
     "    for i, latent_kde_classifier_strict in enumerate(kdes):\n",
@@ -1488,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,21 +1537,6 @@
     "    counter = 0\n",
     "    svm_count = float('inf')  # Track when SVM was first classified\n",
     "\n",
-    "    # if  pred_svm == 0 :\n",
-    "    #     bike_features_point = bike_parameters[0][column_indices_to_keep]\n",
-    "    #     pred_svm = svm_clf.predict(bike_features_point.reshape(1, -1))[0]\n",
-    "    #     if pred_svm == 1:\n",
-    "    #         svm_bikes.append(bike_parameters[0])  # Add as a new row\n",
-    "    #         svm_count = counter  # Track when SVM first made its decision\n",
-    "\n",
-    "\n",
-    "# #### remove\n",
-    "#     bike_features_point = bike_parameters[0][column_indices_to_keep]\n",
-    "#     pred_svm = 1\n",
-    "#     if pred_svm == 1:\n",
-    "#         svm_bikes.append(bike_parameters[0])  # Add as a new row\n",
-    "#         svm_count = counter  # Track when SVM first made its decision\n",
-    "# ########\n",
     "\n",
     "    # Update each threshold-specific classifier prediction and append results if not already added\n",
     "    for i, latent_kde_classifier_strict in enumerate(kdes):\n",
